Unify service cards and update transition styles
Refactored the service cards in index.html to use a consistent structure, icon, and placeholder text for all services. Updated main.css to use a CSS variable for transition timing and adjusted spacing and transform values for smoother hover effects.

--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
         </div>
 
         <div class="row justify-content-center">
-
+          
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="service-card position-relative z-1">
               <div class="service-icon">
@@ -405,131 +405,93 @@
             </div>
           </div>
 
-          <!-- <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
-            <div class="service-card position-relative z-1">
-              <div class="service-icon">
-                <!-- <i class="bi bi-palette"></i> 
-                <img src="assets/img/about/about-portrait-1.png" alt="Mobile Apps Icon" class="service-icon-img">
-              </div>
-              <!-- <a href="#contact"
-                class="card-action d-flex align-items-center justify-content-center rounded-circle">
-                <i class="bi bi-arrow-up-right"></i>
-              </a> 
-              <h3>
-                <a>
-                  Mobile Apps <span>development</span>
-                </a>
-              </h3>
-              <p>
-                iOS, Android, or both — we build sleek, scalable apps that people actually want to tap.
-                Code? Clean. UX? Addictive. Results? Ask our clients.
-              </p>
-            </div>
-          </div> -->
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
-            <div class="service-card position-relative z-1">
-              <div class="service-icon">
-                <!-- <i class="bi bi-gem"></i> -->
-                <img src="assets/img/icons/web-development.png" alt="Website Development Icon" class="service-icon-img">
-              </div>
-              <!-- <a href="#contact"
-                class="card-action d-flex align-items-center justify-content-center rounded-circle">
-                <i class="bi bi-arrow-up-right"></i>
-              </a> -->
-              <h3>
-                <a>
-                  Website <span>development</span>
-                </a>
-              </h3>
-              <p>
-                From landing pages to full-blown platforms, our sites are fast, functional, and fabulous.
-                We blend design with dev so your brand never looks basic.
-              </p>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
-            <div class="service-card position-relative z-1">
-              <div class="service-icon">
-                <!-- <i class="bi bi-megaphone"></i> -->
-                <img src="assets/img/icons/branding.png" alt="Website Development Icon" class="service-icon-img">
-              </div>
-              <!-- <a href="#contact"
-                class="card-action d-flex align-items-center justify-content-center rounded-circle">
-                <i class="bi bi-arrow-up-right"></i>
-              </a> -->
-              <h3>
-                <a>
-                  Branding & <span>Identity Design
-                  </span>
-                </a>
-              </h3>
-              <p>
-                Branding, UI, graphics — you name it, we make it scroll-stopping.
-                Design is our playground, and your brand’s about to have fun.
-              </p>
-            </div>
-          </div>
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="service-card position-relative z-1">
               <div class="service-icon">
-                <!-- <i class="bi bi-code-slash"></i> -->
-                <img src="assets/img/icons/social-media.png" alt="Website Development Icon" class="service-icon-img">
+                <img src="assets/img/icons/web-development.png" alt="Mobile Apps Icon" class="service-icon-img">
               </div>
-              <!-- <a href="#contact"
-                class="card-action d-flex align-items-center justify-content-center rounded-circle">
-                <i class="bi bi-arrow-up-right"></i>
-              </a> -->
-              <h3>
-                <a>
-                  Content Marketing & <span>Management</span>
-                </a>
-              </h3>
-              <p>
-                Reels, posts, visuals, campaigns — we turn scrolls into clicks and followers into fans.
-                Perfect for creators, startups, and anyone with something worth showing off.
-              </p>
+              <div class="content-area">
+                <h3>
+                  <a>
+                    Website <span>development</span>
+                  </a>
+                </h3>
+                <p>
+                  Code? Clean. UX? Addictive. Results? Ask our clients.
+                </p>
+              </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
+
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="service-card position-relative z-1">
               <div class="service-icon">
-                <!-- <i class="bi bi-graph-up"></i> -->
-                <img src="assets/img/icons/ui-ux.png" alt="Website Development Icon" class="service-icon-img">
+                <img src="assets/img/icons/web-development.png" alt="Mobile Apps Icon" class="service-icon-img">
               </div>
-              <!-- <a href="#contact"
-                class="card-action d-flex align-items-center justify-content-center rounded-circle">
-                <i class="bi bi-arrow-up-right"></i>
-              </a> -->
-              <h3>
-                <a>
-                  UI & UX <span>Design</span>
-                </a>
-              </h3>
-              <p>
-                Aenean vel augue vel nisi bibendum posuere. Phasellus in lacus quis urna sodales dignissim. Duis aliquam
-                libero eget risus facilisis. Quisque eget libero vel nisl fringilla.
-              </p>
+              <div class="content-area">
+                <h3>
+                  <a>
+                    Branding & Identity <span>Design</span>
+                  </a>
+                </h3>
+                <p>
+                  Code? Clean. UX? Addictive. Results? Ask our clients.
+                </p>
+              </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
+
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="service-card position-relative z-1">
               <div class="service-icon">
-                <!-- <i class="bi bi-camera-video"></i> -->
-                <img src="assets/img/icons/strategy.png" alt="Website Development Icon" class="service-icon-img">
+                <img src="assets/img/icons/web-development.png" alt="Mobile Apps Icon" class="service-icon-img">
               </div>
-              <!-- <a href="#contact"
-                class="card-action d-flex align-items-center justify-content-center rounded-circle">
-                <i class="bi bi-arrow-up-right"></i>
-              </a> -->
-              <h3>
-                <a>
-                  Content <span>Strategy</span>
-                </a>
-              </h3>
-              <p>
-                Etiam efficitur lacus in diam finibus, nec ultrices est sagittis. Maecenas elementum magna sed risus
-                faucibus, nec commodo purus facilisis. Vestibulum accumsan magna.
-              </p>
+              <div class="content-area">
+                <h3>
+                  <a>
+                    Content Marketing & <span>Management</span>
+                  </a>
+                </h3>
+                <p>
+                  Code? Clean. UX? Addictive. Results? Ask our clients.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
+            <div class="service-card position-relative z-1">
+              <div class="service-icon">
+                <img src="assets/img/icons/web-development.png" alt="Mobile Apps Icon" class="service-icon-img">
+              </div>
+              <div class="content-area">
+                <h3>
+                  <a>
+                    UI & UX <span>Design</span>
+                  </a>
+                </h3>
+                <p>
+                  Code? Clean. UX? Addictive. Results? Ask our clients.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
+            <div class="service-card position-relative z-1">
+              <div class="service-icon">
+                <img src="assets/img/icons/web-development.png" alt="Mobile Apps Icon" class="service-icon-img">
+              </div>
+              <div class="content-area">
+                <h3>
+                  <a>
+                    Content <span>Strategy</span>
+                  </a>
+                </h3>
+                <p>
+                  Code? Clean. UX? Addictive. Results? Ask our clients.
+                </p>
+              </div>
             </div>
           </div>
         </div>
