Revamp service icons, team section, and pricing plans
Replaced and reorganized service and portfolio icon assets, updating CSS to use new icon files and improving responsive styles for services, pricing, and FAQ sections. Updated the team section in index.html with new member images and roles, revised pricing plan names and values, and enhanced feature lists in portfolio-details.html with custom icons. Removed unused and outdated icon files.

--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
               <div class="content-area">
                 <h3>
                   <a>
-                    Mobile Apps <span>development</span>
+                    Mobile Apps <span>Development</span>
                   </a>
                 </h3>
                 <p>
@@ -408,12 +408,12 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="service-card position-relative z-1">
               <div class="service-icon">
-                <img src="assets/img/icons/web-development.png" alt="Mobile Apps Icon" class="service-icon-img">
+                <img src="assets/img/abstract/mobile-development.png" alt="Mobile Apps Icon" class="service-icon-img">
               </div>
               <div class="content-area">
                 <h3>
                   <a>
-                    Website <span>development</span>
+                    Website<span> Development</span>
                   </a>
                 </h3>
                 <p>
@@ -426,12 +426,12 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="service-card position-relative z-1">
               <div class="service-icon">
-                <img src="assets/img/icons/web-development.png" alt="Mobile Apps Icon" class="service-icon-img">
+                <img src="assets/img/abstract/mobile-development.png" alt="Mobile Apps Icon" class="service-icon-img">
               </div>
               <div class="content-area">
                 <h3>
                   <a>
-                    Branding & Identity <span>Design</span>
+                    Branding<span> & Identity Design</span>
                   </a>
                 </h3>
                 <p>
@@ -444,12 +444,12 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="service-card position-relative z-1">
               <div class="service-icon">
-                <img src="assets/img/icons/web-development.png" alt="Mobile Apps Icon" class="service-icon-img">
+                <img src="assets/img/abstract/mobile-development.png" alt="Mobile Apps Icon" class="service-icon-img">
               </div>
               <div class="content-area">
                 <h3>
                   <a>
-                    Content Marketing & <span>Management</span>
+                    Content<span> Marketing & Management</span>
                   </a>
                 </h3>
                 <p>
@@ -462,7 +462,7 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="service-card position-relative z-1">
               <div class="service-icon">
-                <img src="assets/img/icons/web-development.png" alt="Mobile Apps Icon" class="service-icon-img">
+                <img src="assets/img/abstract/mobile-development.png" alt="Mobile Apps Icon" class="service-icon-img">
               </div>
               <div class="content-area">
                 <h3>
@@ -480,12 +480,12 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="service-card position-relative z-1">
               <div class="service-icon">
-                <img src="assets/img/icons/web-development.png" alt="Mobile Apps Icon" class="service-icon-img">
+                <img src="assets/img/abstract/mobile-development.png" alt="Mobile Apps Icon" class="service-icon-img">
               </div>
               <div class="content-area">
                 <h3>
                   <a>
-                    Content <span>Strategy</span>
+                    Content<span> Strategy</span>
                   </a>
                 </h3>
                 <p>
@@ -1117,7 +1117,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Team</h2>
-        <div><span>Check Our</span> <span class="description-title">Team</span></div>
+        <div><span>Meet Our</span> <span class="description-title">Team</span></div>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -1127,11 +1127,11 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <div class="team-member d-flex">
               <div class="member-img">
-                <img src="assets/img/person/person-m-7.webp" class="img-fluid" alt="" loading="lazy">
+                <img src="assets/img/person/moutamid.png" class="img-fluid" alt="" loading="lazy">
               </div>
               <div class="member-info flex-grow-1">
-                <h4>Walter White</h4>
-                <span>Chief Executive Officer</span>
+                <h4>Moutamid Monim</h4>
+                <span>Software Developer</span>
                 <p>Aliquam iure quaerat voluptatem praesentium possimus unde laudantium vel dolorum distinctio dire flow
                 </p>
                 <div class="social">
@@ -1147,11 +1147,11 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <div class="team-member d-flex">
               <div class="member-img">
-                <img src="assets/img/person/person-f-8.webp" class="img-fluid" alt="" loading="lazy">
+                <img src="assets/img/person/faizan.png" class="img-fluid" alt="" loading="lazy">
               </div>
               <div class="member-info flex-grow-1">
-                <h4>Sarah Jhonson</h4>
-                <span>Product Manager</span>
+                <h4>Faizan Faiber</h4>
+                <span>UI/UX Designer</span>
                 <p>Labore ipsam sit consequatur exercitationem rerum laboriosam laudantium aut quod dolores
                   exercitationem ut</p>
                 <div class="social">
@@ -1167,11 +1167,11 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="300">
             <div class="team-member d-flex">
               <div class="member-img">
-                <img src="assets/img/person/person-m-6.webp" class="img-fluid" alt="" loading="lazy">
+                <img src="assets/img/person/mahnoor.png" class="img-fluid" alt="" loading="lazy">
               </div>
               <div class="member-info flex-grow-1">
-                <h4>William Anderson</h4>
-                <span>CTO</span>
+                <h4>Mahnoor Wise</h4>
+                <span>Marketing Manager</span>
                 <p>Illum minima ea autem doloremque ipsum quidem quas aspernatur modi ut praesentium vel tque sed
                   facilis at qui</p>
                 <div class="social">
@@ -1187,11 +1187,11 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
             <div class="team-member d-flex">
               <div class="member-img">
-                <img src="assets/img/person/person-f-4.webp" class="img-fluid" alt="" loading="lazy">
+                <img src="assets/img/person/muzna.png" class="img-fluid" alt="" loading="lazy">
               </div>
               <div class="member-info flex-grow-1">
-                <h4>Amanda Jepson</h4>
-                <span>Accountant</span>
+                <h4>Muzna Farid</h4>
+                <span>Creative Designer</span>
                 <p>Magni voluptatem accusamus assumenda cum nisi aut qui dolorem voluptate sed et veniam quasi quam
                   consectetur</p>
                 <div class="social">
@@ -1276,8 +1276,8 @@
               <div class="plan-pricing-consultancy">
                 <div class="price">
                   <span class="currency">$</span>
-                  <span class="amount">12</span>
-                  <span class="period">/month</span>
+                  <span class="amount">36</span>
+                  <span class="period"></span>
                 </div>
               </div>
               <div class="plan-features-consultancy">
@@ -1304,14 +1304,14 @@
                   <!-- <i class="bi bi-briefcase"></i> -->
                   <img src="assets/img/icons/professional.png" alt="Website Development Icon" class="service-icon-img">
                 </div>
-                <h3>One Time</h3>
+                <h3>Subscription</h3>
                 <p>For small teams and businesses</p>
               </div>
               <div class="plan-pricing-onetime">
                 <div class="price">
                   <span class="currency">$</span>
-                  <span class="amount">39</span>
-                  <span class="period">/month</span>
+                  <span class="amount">670+</span>
+                  <span class="period"></span>
                 </div>
               </div>
               <div class="plan-features-onetime">
@@ -1329,7 +1329,7 @@
             </div>
           </div><!-- End Professional Plan -->
 
-          <!-- Enterprise Plan -->
+           <!-- Enterprise Plan -->
           <div class="col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="400">
             <div class="pricing-card-subscription">
               <div class="plan-header-subscription">
@@ -1337,13 +1337,13 @@
                   <!-- <i class="bi bi-building"></i> -->
                   <img src="assets/img/icons/enterprise.png" alt="Website Development Icon" class="service-icon-img">
                 </div>
-                <h3>Subscription</h3>
+                <h3>One Time</h3>
                 <p>For large organizations</p>
               </div>
               <div class="plan-pricing-subscription">
                 <div class="price">
                   <span class="currency">$</span>
-                  <span class="amount">79</span>
+                  <span class="amount">1167+</span>
                   <span class="period">/month</span>
                 </div>
               </div>
@@ -1377,9 +1377,9 @@
             <h2 class="faq-title">Got questions? We’ve got answers</h2>
             <p class="faq-description">No corporate snooze fest here. If you don’t see your question, just ask. We don’t
               bite (much).</p>
-              <div class="icon-box">
+              <div class="faq-arrow">
                 <!-- <i class="bi bi-geo-alt"></i> -->
-                <img src="assets/img/icons/arrow-faq.gif" alt="Website Development Icon" class="service-icon-img">
+                <img src="assets/img/icons/arrow-faq.gif" alt="Website Development Icon" class="faq-icon-img">
               </div>
             <!-- <div class="faq-arrow d-none d-lg-block" data-aos="fade-up" data-aos-delay="200">
               <svg class="faq-arrow" width="200" height="211" viewBox="0 0 200 211" fill="none"
