--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -295,16 +295,53 @@
                 <div class="row g-3">
                   <div class="col-md-6">
                     <ul class="feature-list">
-                      <li><i class="bi bi-check2-circle"></i> Real-time Data Visualization</li>
-                      <li><i class="bi bi-check2-circle"></i> User Role Management</li>
-                      <li><i class="bi bi-check2-circle"></i> Secure Authentication</li>
+                      <li>
+                        <!-- <i class="bi bi-check2-circle"></i>  -->
+                        <img src="assets/img/icons/always-on.png"
+                          style="width: 1.5rem; height: 1.5rem; margin-right: 5px;" alt="Website Development Icon"
+                          class="service-icon-img">
+                        Real-time Data Visualization
+                      </li>
+                      <li>
+                        <!-- <i class="bi bi-check2-circle"></i>  -->
+                        <img src="assets/img/icons/always-on.png"
+                          style="width: 1.5rem; height: 1.5rem; margin-right: 5px;" alt="Website Development Icon"
+                          class="service-icon-img">
+                        User Role Management
+                      </li>
+                      <li>
+                        <!-- <i class="bi bi-check2-circle"></i> -->
+                        <img src="assets/img/icons/always-on.png"
+                          style="width: 1.5rem; height: 1.5rem; margin-right: 5px;" alt="Website Development Icon"
+                          class="service-icon-img">
+                        Secure Authentication
+                      </li>
                     </ul>
                   </div>
                   <div class="col-md-6">
                     <ul class="feature-list">
-                      <li><i class="bi bi-check2-circle"></i> Customizable Dashboards</li>
-                      <li><i class="bi bi-check2-circle"></i> Data Export Options</li>
-                      <li><i class="bi bi-check2-circle"></i> Multi-device Support</li>
+                      <li>
+                        <!-- <i class="bi bi-check2-circle"></i> -->
+                        <img src="assets/img/icons/always-on.png"
+                          style="width: 1.5rem; height: 1.5rem; margin-right: 5px;" alt="Website Development Icon"
+                          class="service-icon-img">
+                        Customizable Dashboards
+                      </li>
+                      <li>
+                        <!-- <i class="bi bi-check2-circle"></i> -->
+                        <img src="assets/img/icons/always-on.png"
+                          style="width: 1.5rem; height: 1.5rem; margin-right: 5px;" alt="Website Development Icon"
+                          class="service-icon-img">
+                        Data Export Options
+                      </li>
+                      <li>
+                        <!-- <i class="bi bi-check2-circle"> -->
+                        <img src="assets/img/icons/always-on.png"
+                          style="width: 1.5rem; height: 1.5rem; margin-right: 5px;" alt="Website Development Icon"
+                          class="service-icon-img">
+                        </i>
+                        Multi-device Support
+                      </li>
                     </ul>
                   </div>
                 </div>
