Add custom animated cursor to site
Implemented a custom cursor using new images and CSS, replacing the default cursor with animated states for normal, hover, and click. Updated main.js to handle cursor movement and state changes. Minor update to CTA button text in index.html and commented out some CSS styles for call-to-action section.

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
               <div class="cta-button">
                 <a href="#services" class="btn">
-                  <span>explore</span>
+                  <span>schedule a call</span>
                   <i class="bi bi-arrow-right"></i>
                 </a>
               </div>
