Update pricing icons and preloader animation
Replaces old GIF-based preloader with a Lottie animation and updates the pricing section to use new, larger PNG icons for consultation, onetime, and subscription plans. Adjusts related CSS for icon sizing, background colors, and layout. Adds new image and animation assets.

--- a/index.html
+++ b/index.html
@@ -1268,7 +1268,7 @@
               <div class="plan-header-consultancy">
                 <div class="plan-icon">
                   <!-- <i class="bi bi-box"></i> -->
-                  <img src="assets/img/icons/starter.png" alt="Website Development Icon" class="service-icon-img">
+                  <img src="assets/img/abstract/ic-subscription-consultation.png" alt="Website Development Icon" class="service-icon-img">
                 </div>
                 <h3>Consultation</h3>
                 <p>For individuals just getting started</p>
@@ -1302,7 +1302,7 @@
               <div class="plan-header-onetime">
                 <div class="plan-icon">
                   <!-- <i class="bi bi-briefcase"></i> -->
-                  <img src="assets/img/icons/professional.png" alt="Website Development Icon" class="service-icon-img">
+                  <img src="assets/img/abstract/ic-subscription-subscription.png" alt="Website Development Icon" class="service-icon-img">
                 </div>
                 <h3>Subscription</h3>
                 <p>For small teams and businesses</p>
@@ -1335,7 +1335,7 @@
               <div class="plan-header-subscription">
                 <div class="plan-icon">
                   <!-- <i class="bi bi-building"></i> -->
-                  <img src="assets/img/icons/enterprise.png" alt="Website Development Icon" class="service-icon-img">
+                  <img src="assets/img/abstract/ic-subscription-onetime.png" alt="Website Development Icon" class="service-icon-img">
                 </div>
                 <h3>One Time</h3>
                 <p>For large organizations</p>
@@ -1663,7 +1663,16 @@
       class="bi bi-arrow-up-short"></i></a>
 
   <!-- Preloader -->
-  <div id="preloader"></div>
+  <div id="preloader">
+    <lottie-player
+      src="assets/img/misc/intro-illustration.json"
+      background="transparent"
+      speed="1"
+      style="width: 100vw; height: 100vh;"
+      loop
+      autoplay>
+    </lottie-player>
+  </div>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -1673,6 +1682,9 @@
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
   <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  
+  <!-- Lottie Player -->
+  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
