--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -428,7 +428,16 @@
       class="bi bi-arrow-up-short"></i></a>
 
   <!-- Preloader -->
-  <div id="preloader"></div>
+  <div id="preloader">
+    <lottie-player
+      src="assets/img/misc/intro-illustration.json"
+      background="transparent"
+      speed="1"
+      style="width: 100vw; height: 100vh;"
+      loop
+      autoplay>
+    </lottie-player>
+  </div>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -438,6 +447,9 @@
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
   <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  
+  <!-- Lottie Player -->
+  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
