--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-getstarted" href="#contact">let's go</a>
+      <a class="btn-getstarted" href="#pricing">Okay, I'm Curious</a>
 
     </div>
   </header>
@@ -104,9 +104,8 @@
               <div class="divider"></div>
 
               <div class="description">
-                <p>We build apps, websites, and visuals that actually slap — clean code meets chaotic design thinking.
-                  From branding to backend, we do it all in-house and out-of-the-box. Welcome to Fooliz — where pixels
-                  party and nerds rule.</p>
+                <!-- <p>Fooliz is a design-driven tech studio. We build apps and websites from a design-first perspective. we craft full digital solutions beyond the launch phase, from branding and strategy to marketing and long-term maintenance. At Fooliz, the idea isn’t just to make things work, but to make them look good working.</p> -->
+                <p>Fooliz is a design-driven tech studio, building apps, websites and visuals from a design-first perspective. We craft full-scale digital solutions beyond the launch phase, from branding and strategy to marketing and long-term maintenance. At Fooliz, the idea is to make things look good while they work.</p>
               </div>
 
               <div class="cta-button">
@@ -155,7 +154,7 @@
         <div class="row gx-5 align-items-center">
           <div class="col-lg-6" data-aos="fade-right" data-aos-delay="200">
             <div class="about-image position-relative">
-              <img src="assets/img/about/about-portrait-1.png" class="img-fluid rounded-4 shadow-sm" alt="About Image"
+              <img src="assets/img/abstract/hero-artwork.png" class="img-fluid rounded-4 shadow-sm" alt="About Image"
                 loading="lazy">
               <!-- <div class="experience-badge">
                 <span class="years">5+</span>
