--- a/index.html
+++ b/index.html
@@ -104,8 +104,7 @@
               <div class="divider"></div>
 
               <div class="description">
-                <!-- <p>Fooliz is a design-driven tech studio. We build apps and websites from a design-first perspective. we craft full digital solutions beyond the launch phase, from branding and strategy to marketing and long-term maintenance. At Fooliz, the idea isn’t just to make things work, but to make them look good working.</p> -->
-                <p>Fooliz is a design-driven tech studio, building apps, websites and visuals from a design-first perspective. We craft full-scale digital solutions beyond the launch phase, from branding and strategy to marketing and long-term maintenance. At Fooliz, the idea is to make things look good while they work.</p>
+                <p>Fooliz is a design-driven tech studio, building apps, websites and visuals from a design-first perspective. We craft full-scale digital solutions beyond the launch phase, making sure everything we build works great.</p>
               </div>
 
               <div class="cta-button">
