--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>About</h2>
-        <div><span>Learn More</span> <span class="description-title">About Us</span></div>
+        <div><span>Meet the </span> <span class="description-title">Nerds</span></div>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -164,9 +164,8 @@
 
           <div class="col-lg-6 mt-4 mt-lg-0" data-aos="fade-left" data-aos-delay="300">
             <div class="about-content">
-              <h2>Not Your Average Tech Studio</h2>
-              <p class="lead">Fooliz is a design-driven, code-loving creative lab that blends brains with boldness.
-                We’re not here to play it safe — we build things that stand out and scale.</p>
+              <h2>Clean Code, Wild Design</h2>
+              <p class="lead">A code-loving creative lab that blends brains with style. We build things that stand out and scale.</p>
               <!-- <p>From strategy to pixels to product launch, our crew goes all in. 
                 We’re the creative partner you didn’t know you needed (but now can’t unsee).</p>-->
 
@@ -175,23 +174,21 @@
                   <div class="feature-item-green">
                     <!-- <i class="bi bi-check-circle-fill"></i> -->
                     <img src="assets/img/icons/always-on.png" alt="Future Ready Icon" class="feature-icon">
-                    <h5>Always-On Project Crew</h5>
-                    <p>You don’t just get a dev — you get a full, nerdy, obsessed team.
-                      We stick around, solve problems, and move like we're part of your squad.</p>
+                    <h5>Clean Code</h5>
+                    <p>Code that’s as neat as it is nerdy. Easy to read, easy to scale, and built to last. No spaghetti, no shortcuts, just solid foundations that keep your product running smooth.</p>
                   </div>
                 </div>
                 <div class="col-md-6" data-aos="zoom-in" data-aos-delay="450">
                   <div class="feature-item-beige">
                     <!-- <i class="bi bi-lightbulb-fill"></i> -->
                     <img src="assets/img/icons/launch-ready.png" alt="Future Ready Icon" class="feature-icon">
-                    <h5>Future-Ready by Default</h5>
-                    <p>We don’t just follow trends — we blueprint what’s next.
-                      Your brand deserves more than "meh" ideas and version 1.0 thinking.</p>
+                    <h5>Wild Design</h5>
+                    <p>Blueprinting what’s next. Your brand deserves more than "meh" ideas and version 1.0 design.</p>
                   </div>
                 </div>
               </div>
 
-              <a href="#services" class="btn btn-primary mt-4">explore our services</a>
+              <!-- <a href="#services" class="btn btn-primary mt-4">explore our services</a> -->
             </div>
           </div>
         </div>
