Refine UI styles and update portfolio interactions
Improved color styling for 'Clean Code, Wild Design' headline and testimonial buttons in CSS. Reduced preloader minimum display time in JS for faster loading. Updated index.html to use new headline styling, lowercase CTA, and commented out or removed several portfolio lightbox links and buttons for a cleaner UI. In portfolio-details.html, replaced Bootstrap icon elements with custom image icons in accordion headers and made minor formatting improvements.

--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -238,7 +238,10 @@
                     <h2 class="accordion-header">
                       <button class="accordion-button" type="button" data-bs-toggle="collapse"
                         data-bs-target="#portfolio-details-collapse-1" aria-expanded="true" aria-controls="collapseOne">
-                        <i class="bi bi-clipboard-data me-2"></i> Project Overview
+                        <!-- <i class="bi bi-clipboard-data me-2"></i>  -->
+                        <img src="assets/img/icons/uiux2.png"
+                          style="width: 2rem; height: 2rem; margin-left: -0.5rem; margin-right: 0.6rem;"
+                          alt="Website Development Icon">Project Overview
                       </button>
                     </h2>
                     <div id="portfolio-details-collapse-1" class="accordion-collapse collapse show"
@@ -256,7 +259,10 @@
                       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                         data-bs-target="#portfolio-details-collapse-2" aria-expanded="false"
                         aria-controls="collapseTwo">
-                        <i class="bi bi-exclamation-diamond me-2"></i> The Challenge
+                        <!-- <i class="bi bi-exclamation-diamond me-2"></i> -->
+                        <img src="assets/img/icons/uiux2.png"
+                          style="width: 2rem; height: 2rem; margin-left: -0.5rem; margin-right: 0.6rem;"
+                          alt="Website Development Icon">The Challenge
                       </button>
                     </h2>
                     <div id="portfolio-details-collapse-2" class="accordion-collapse collapse"
@@ -274,7 +280,10 @@
                       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                         data-bs-target="#portfolio-details-collapse-3" aria-expanded="false"
                         aria-controls="collapseThree">
-                        <i class="bi bi-award me-2"></i> The Solution
+                        <!-- <i class="bi bi-award me-2"></i> -->
+                        <img src="assets/img/icons/uiux2.png"
+                          style="width: 2rem; height: 2rem; margin-left: -0.5rem; margin-right: 0.6rem;"
+                          alt="Website Development Icon">The Solution
                       </button>
                     </h2>
                     <div id="portfolio-details-collapse-3" class="accordion-collapse collapse"
@@ -429,13 +438,8 @@
 
   <!-- Preloader -->
   <div id="preloader">
-    <lottie-player
-      src="assets/img/misc/intro-illustration.json"
-      background="transparent"
-      speed="1"
-      style="width: 100vw; height: 100vh;"
-      loop
-      autoplay>
+    <lottie-player src="assets/img/misc/intro-illustration.json" background="transparent" speed="1"
+      style="width: 100vw; height: 100vh;" loop autoplay>
     </lottie-player>
   </div>
 
@@ -447,7 +451,7 @@
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
   <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  
+
   <!-- Lottie Player -->
   <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 
